<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Quizz Bateau</string>
    <string name="action_settings">Paramètres</string>
    <string name="sync_settings">Télécharger Quizz</string>
    <string name="resetcounters_settings">Reset compteurs</string>
    <string name="question">Question</string>
    <string name="answer">Réponse</string>
    <string name="show">Montrer la réponse</string>
    <string name="wrong">Zut</string>
    <string name="right">J\'ai répondu juste</string>
    <string name="title_activity_sync">Téléchargement Quizz</string>
    <string name="synchronize">Télécharger</string>
    <string name="deleteall_settings">Effacer toutes les questions</string>
    <string name="about_settings">A Propos...</string>
    <string name="quizz_settings">Changer de Quizz</string>
    <string name="view_settings">Consulter les questions</string>
    <string name="initial_stats">0/0</string>
    <string name="title_activity_quizz">Sélection Quizz</string>
    <string name="current_quizz_title">Quizz actuel</string>
    <string name="available_quizz_title">Quizz disponibles</string>
    <string name="all_quizz">Utiliser tous les Quizz disponibles</string>
    <string name="set_quizz">Sélectionner</string>
    <string name="title_activity_list_view">Liste de questions</string>
    <string name="questions_list">Liste de Questions</string>
    <string name="type_here_filter">Filter...</string>
    <string name="no_question_text">Pas de question disponible. Téléchargez les questions en allant dans le menu en-haut à droite et en sélectionnant \"Télécharger Quizz\".</string>
    <string name="no_quizz_text">Pas de quizz disponible. Télécharger les quizz en allant dans le menu en-haut à droite et en sélectionnant \"Télécharger Quizz\".</string>
    <string name="sync_ok_text">Téléchargement réussi ! Revenez en arrière pour démarrer le Quizz !</string>
    <string name="sync_ongoing_text">Téléchargement en cours. Merci de patienter...</string>
    <string name="title_activity_about">A Propos de Quizz Bateau</string>
    <string name="about_content">Application créée par Cyril Reato\n\ncyril@reato.ch\n\nN\'hésitez pas à m\'écrire en cas de question ou commentaire, ou pour ajouter ou corriger des questions.\n\nMerci !\n\nCyril</string>
    <string name="dummy_button">Back</string>
</resources>
