<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="ch.ifage.quizz.MainActivity">

    <TextView
        android:id="@+id/labelQuestion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:textAllCaps="true"
        android:textStyle="bold"
        android:text="@string/question" />

    <TextView
        android:id="@+id/labelStats"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15dp"
        android:layout_alignParentRight="true"
        android:layout_alignBottom="@id/labelQuestion" />

    <TextView
        android:id="@+id/textQuestion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/labelQuestion"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/labelQuestion"
        android:minLines="6"
        android:singleLine="false"
        android:background="@drawable/back"
        android:ems="10"
        android:padding="5dp" />

    <ImageView
        android:id="@+id/imgQuestion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/textQuestion" />

    <Button
        android:id="@+id/buttonShow"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/show"
        android:onClick="onClickShow"
        android:layout_below="@+id/imgQuestion"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="5dp" />

    <TextView
        android:id="@+id/labelAnswer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:textAllCaps="true"
        android:textStyle="bold"
        android:text="@string/answer"
        android:layout_below="@+id/buttonShow"
        android:layout_alignParentStart="true" />

    <ScrollView
        android:id="@+id/scrollAnswer"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_alignLeft="@+id/labelAnswer"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/labelAnswer">
    <TextView
        android:id="@+id/textAnswer"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:minLines="8"
        android:singleLine="false"
        android:background="@drawable/back"
        android:ems="10"
        android:padding="5dp" />
    </ScrollView>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/scrollAnswer"
        android:layout_marginTop="0dp">
        <Button
            android:id="@+id/buttonWrong"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/wrong"
            android:onClick="onClickWrong" />

        <Button
            android:id="@+id/buttonRight"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/right"
            android:onClick="onClickRight" />

    </LinearLayout>

</RelativeLayout>
